--- a/frontend/src/components/SurveyPage/SurveyPage.css
+++ b/frontend/src/components/SurveyPage/SurveyPage.css
@@ -1,3 +1,6 @@
-.App {
-  padding: 3rem;
+.SurveyPage__charts {
+  display: grid;
+  grid-template: auto auto / 1fr 1fr;
+  gap: 1rem;
+  padding: 0;
 }
